# template-python-project

./: CHANGELOG.md  CONTRIBUTING.md  DOCKERFILE  LICENSE  README.md  mkdocs.yml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: index.md  install.md
my_package/: __init__.py  core.py
tests/: core_test.py
