[metadata]
name = opensource_python_project
version = 0.1.0
author = Your Name
author_email = your@email.com
description = My project is a simple example project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourname/opensource_python_project
license = MIT
classifiers =
    Development Status :: 3 - Alpha

[options]
packages =
    my_package
# These are the production dependencies
install_requires =
    requests